--- a/locale/uk_UA/locale.xml
+++ b/locale/uk_UA/locale.xml
@@ -13,8 +13,8 @@
   -->
 
 <locale name="en_US" full_name="U.S. English">
-	<message key="plugins.generic.docxToJats.displayName">Плагін для конвертації DOCX в JATS XML</message>
-	<message key="plugins.generic.docxToJats.description">Розроблений для конвертації наукових статей із формату DOCX (OOXML) в формат JATS XML.</message>
-	<message key="plugins.generic.docxToJats.button.parseDocx">Конвертувати в JATS XML</message>
+	<message key="plugins.generic.docxToTEI.displayName">Плагін для конвертації DOCX в JATS XML</message>
+	<message key="plugins.generic.docxToTEI.description">Розроблений для конвертації наукових статей із формату DOCX (OOXML) в формат JATS XML.</message>
+	<message key="plugins.generic.docxToTEI.button.parseDocx">Конвертувати в JATS XML</message>
 	<message key="grid.action.parse">Конвертувати цей файл в JATS XML</message>
 </locale>
